Bug 324841 - Plasma crashes when clicking on launcher for uninstalled program
Summary: Plasma crashes when clicking on launcher for uninstalled program
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.11.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-09-12 14:49 UTC by Daniel Ziltener
Modified: 2013-09-12 21:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Ziltener 2013-09-12 14:49:54 UTC
Application: plasma-desktop (4.11.1)
KDE Platform Version: 4.11.1
Qt Version: 4.8.5
Operating System: Linux 3.11.0-27.g0a1c41f-desktop x86_64
Distribution: "openSUSE 12.3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

After uninstalling Firefox the launcher was still in the panel, even after a restart. I clicked it, and plasma-desktop crashed. Now the launcher is gone.

-- Backtrace:
Application: Plasma-Desktop-Umgebung (plasma-desktop), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f586c592780 (LWP 4475))]

Thread 3 (Thread 0x7f584ee37700 (LWP 4499)):
#0  0x00007f586ae43964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f585f197fa7 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7f585f4a5660 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007f585f197fd9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007f586ae3fe0f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f5869bb07dd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f57c383f700 (LWP 4518)):
#0  0x00007f5869ba787d in poll () from /lib64/libc.so.6
#1  0x00007f5866ab3dfc in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f5866ab3f24 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f586b2045d6 in QEventDispatcherGlib::processEvents (this=0x7f57bc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#4  0x00007f586b1d4bef in QEventLoop::processEvents (this=this@entry=0x7f57c383edd0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f586b1d4e78 in QEventLoop::exec (this=0x7f57c383edd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f586b0d7110 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:536
#7  0x00007f586b1b53af in QInotifyFileSystemWatcherEngine::run (this=0x95a180) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007f586b0da0ec in QThreadPrivate::start (arg=0x95a180) at thread/qthread_unix.cpp:338
#9  0x00007f586ae3fe0f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f5869bb07dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f586c592780 (LWP 4475)):
[KCrash Handler]
#5  QString (other=<error reading variable: Cannot access memory at address 0x10>, this=0x7fffb0c8f4f0) at /usr/include/QtCore/qstring.h:725
#6  KSycocaEntry::entryPath (this=0x0) at /usr/src/debug/kdelibs-4.11.1/kdecore/sycoca/ksycocaentry.cpp:107
#7  0x00007f58506bbc11 in TaskManager::LauncherItem::launch (this=<optimized out>) at /usr/src/debug/kde-workspace-4.11.1/libs/taskmanager/launcheritem.cpp:229
#8  0x00007f586b1eb44f in QMetaObject::activate (sender=0xebc8f0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb0c8f920) at kernel/qobject.cpp:3556
#9  0x00007f585e9d32a4 in QDeclarativeVMEMetaObject::metaCall (this=0xeb1390, c=<optimized out>, _id=50, a=0x7fffb0c8f920) at qml/qdeclarativevmemetaobject.cpp:639
#10 0x00007f585ea7c508 in QDeclarativeObjectMethodScriptClass::callMethod (this=this@entry=0xe99050, object=object@entry=0xebc8f0, index=50, returnType=<optimized out>, argCount=<optimized out>, argTypes=0x7fffb0c8fbe0, ctxt=ctxt@entry=0x7f57ccd900a8) at qml/qdeclarativeobjectscriptclass.cpp:970
#11 0x00007f585ea7e176 in QDeclarativeObjectMethodScriptClass::callPrecise (this=0xe99050, object=0xebc8f0, data=..., ctxt=0x7f57ccd900a8) at qml/qdeclarativeobjectscriptclass.cpp:944
#12 0x00007f585ea7eaab in QDeclarativeObjectMethodScriptClass::call (this=<optimized out>, o=<optimized out>, ctxt=<optimized out>) at qml/qdeclarativeobjectscriptclass.cpp:917
#13 0x00007f585f20e233 in QScript::DeclarativeObjectDelegate::call (exec=<optimized out>, callee=0x7f57ccd7af80, thisValue=..., args=...) at bridge/qscriptdeclarativeobject.cpp:154
#14 0x00007f585f10aa10 in QTJSC::NativeFuncWrapper::operator() (this=0x7fffb0c8fd30, exec=0x7f57ccd900a8, jsobj=0x7f57ccd7af80, thisValue=..., argList=...) at ../3rdparty/javascriptcore/JavaScriptCore/runtime/CallData.cpp:46
#15 0x00007f585f0e7d6a in QTJSC::cti_op_call_NotJSFunction (args=0x7fffb0c8fd80) at ../3rdparty/javascriptcore/JavaScriptCore/jit/JITStubs.cpp:1780
#16 0x00007f57ce6b5652 in ?? ()
#17 0x0000000000000000 in ?? ()

Possible duplicates by query: bug 294090.

Reported using DrKonqi
Comment 1 Eike Hein 2013-09-12 19:59:42 UTC
Looks like this crash has been there forever. It's in a code path for a rarely-encountered type of special magic launcher items that automatically track the system's default app for a certain category, e.g. the default browser, and just lacks a null pointer check.
Comment 2 Eike Hein 2013-09-12 20:03:35 UTC
Git commit 70f685ce6d137758f71c0e681399a80b49cf3f24 by Eike Hein.
Committed on 12/09/2013 at 20:00.
Pushed by hein into branch 'KDE/4.11'.

Fix crash when attempting to launch a non-existing preferred app.

M  +4    -0    libs/taskmanager/launcheritem.cpp

http://commits.kde.org/kde-workspace/70f685ce6d137758f71c0e681399a80b49cf3f24
Comment 3 Eike Hein 2013-09-12 20:04:35 UTC
Git commit 56d65d639c850baaf53df5229ff4013fed841be0 by Eike Hein.
Committed on 12/09/2013 at 20:00.
Pushed by hein into branch 'frameworks-scratch'.

Fix crash when attempting to launch a non-existing preferred app.

M  +4    -0    libs/taskmanager/launcheritem.cpp

http://commits.kde.org/kde-workspace/56d65d639c850baaf53df5229ff4013fed841be0