Fix crash when attempting to launch a non-existing preferred app.

BUG:324841